src/index.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

/* Font family and rendered font appear smoother */
* {
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

/* Slider margin in mobile screen */
.slick-slide > div {
	margin: 0 5px !important;
}

/* Custom scrollbar in login */
.custom-scrollbar {
	scrollbar-width: thin;
	scrollbar-color: #ccc #f0f0f0;
	padding-right: 5px;
}

.custom-scrollbar::-webkit-scrollbar {
	width: 5px;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
	background-color: #ccc;
	border-radius: 5px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
	background-color: #888;
}

/* Nav item animation on Hover */
.nav-item-animate-hover {
	background: linear-gradient(90deg, transparent 50%, white 50%);
	background-size: 200% 100%;
	background-position: left;
	transition: background 0.2s, color 0.2s;
	color: white;
}

.nav-item-animate-hover:hover {
	background-position: right;
	color: #003476;
}

/* Fade in animation for content */
.content-fade-in-enter	{
	opacity: 0;
}
.content-fade-in-enter-active {
	opacity: 1;
	transition: opacity 400ms ease-in;
}

.content-fade-in-exit {
	opacity: 1;
}
.content-fade-in-exit-active {
	opacity: 0;
	transition: opacity 400ms ease-in;
}

@keyframes scan-vertical {
	0%, 100% { top: calc(0% + var(--scanning-margin)); }
	50% { top: calc(100% - var(--scanning-margin)); }
}

.text-overflow-ellipsis {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

